src/objects/Menu_Option__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Menu_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Menu_Option__c</referenceTo>
        <relationshipLabel>Child Menu Options</relationshipLabel>
        <relationshipName>Menu_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Menu Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>URL__c</columns>
        <columns>Parent_Menu_Option__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MNU-{0000}</displayFormat>
        <label>Menu Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Menu Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>